Deduplicate radical applicability schemas